--- a/developer/bootstrap-cards.html
+++ b/developer/bootstrap-cards.html
@@ -41,14 +41,16 @@
         <nav-item location="/corporate-ui-docs/">Home</nav-item>
         <nav-item location="/corporate-ui-docs/styleguide/">Style Guide</nav-item>            
         <nav-item location="/corporate-ui-docs/developer/" class="active">Web Applications
-          <sub-navigation caption="Scania Bootstrap">
-            <nav-item location="/corporate-ui-docs/developer/bootstrap-original-docs.html" class="active">Bootstrap Documentation</nav-item>
-            <nav-item location="/corporate-ui-docs/template/html-copy-paste/html-copy-paste.html">HTML Copy Paste</nav-item>
-          </sub-navigation>  
+          <sub-navigation caption="Web Applications">
+            <nav-item location="/corporate-ui-docs/developer/">Corporate UI</nav-item>
+            <nav-item location="/corporate-ui-docs/developer/corporate-ui-for-frameworks.html">JS Frameworks</nav-item>
+            <nav-item location="/corporate-ui-docs/developer/bootstrap-original-docs.html">Scania Bootstrap</nav-item>
+            <nav-item location="/corporate-ui-docs/template/html-copy-paste/html-copy-paste.html" >HTML copy paste</nav-item>
+            <nav-item location="/corporate-ui-docs/developer/faq.html">FAQ</nav-item>
+            <nav-item location="/corporate-ui-docs/developer/contact-us.html">Contact Us</nav-item>
+          </sub-navigation>
         </nav-item>
         <nav-item location="/corporate-ui-docs/mobile-apps/">Mobile Apps</nav-item>
-        <nav-item location="https://github.com/scania/corporate-ui/issues">Report an Issue</nav-item>
-        <nav-item location="/corporate-ui-docs/developer/contact-us.html">Contact Us</nav-item>
       </primary-items>
     </c-main-navigation>
 
