--- a/developer/corporate-ui-for-frameworks.html
+++ b/developer/corporate-ui-for-frameworks.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <noscript><meta http-equiv="refresh" content="0;url=https://static.scania.com/vendors/components/pure-js/nonJS-browsers/1.0.0/nonJS-browsers.html"></noscript>
 
-  <title>UX Library - Developers</title>
+  <title>UX Library - Framework Support</title>
   <script src="https://static.scania.com/vendors/components/pure-js/browser-reject/1.0.0/js/browser-reject.js"></script>
 
   <script src="https://static.scania.com/vendors/frameworks/jQuery/1.11.3/jquery-1.11.3.min.js"></script>
