--- a/developer/faq.html
+++ b/developer/faq.html
@@ -1,20 +1,17 @@
 <!DOCTYPE html>
 <html lang="en-GB" class="corporate-ui">
 <head>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta charset="utf-8">
   <noscript><meta http-equiv="refresh" content="0;url=https://static.scania.com/vendors/components/pure-js/nonJS-browsers/1.0.0/nonJS-browsers.html"></noscript>
   <title>UX Library - FAQ</title>
   <script src="https://static.scania.com/vendors/components/pure-js/browser-reject/1.0.0/js/browser-reject.js"></script>
-  <script src="https://static.scania.com/vendors/frameworks/jQuery/1.11.3/jquery-1.11.3.min.js"></script>
   <script src="https://static.scania.com/build/global/3.5.3/js/corporate-ui.js?monitoring=true"></script>
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113165423-1"></script>
   <script src="/corporate-ui-docs/js/google-analytics.js"></script>
 
-
   <link rel="stylesheet" href="/corporate-ui-docs/css/ux-lib.css">
-
 
   <style>
 
@@ -113,12 +110,10 @@
         font-weight: bold;
         color: #4a8ba4;
     }
-
-
   </style>
 
 </head>
-<body class="scania app">
+<body class="scania app light">
 
   <c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/">
     <nav-item location="/corporate-ui-docs/developer/contact-us.html">Contact Us</nav-item>
