--- a/developer/corporate-ui-for-frameworks.html
+++ b/developer/corporate-ui-for-frameworks.html
@@ -25,37 +25,41 @@
 
   <c-main-content>
     <c-main-navigation>
-      <primary-items>
-        <nav-item location="/corporate-ui-docs/">Home</nav-item>
-        <nav-item location="/corporate-ui-docs/styleguide/">Style Guide
-          <sub-navigation caption="Style Guide">
-            <nav-item location="/corporate-ui-docs/logotype/">Logotype</nav-item>
-            <nav-item location="/corporate-ui-docs/icons/">Icons</nav-item>
-            <nav-item location="/corporate-ui-docs/colours/">Colours</nav-item>
-            <nav-item location="/corporate-ui-docs/typography/">Typography</nav-item>
-          </sub-navigation>
-        </nav-item>
-        <nav-item location="/corporate-ui-docs/developer/" class="active">Web Applications
-          <sub-navigation caption="Web Applications">
-            <nav-item location="/corporate-ui-docs/developer/">Corporate UI</nav-item>
-            <nav-item location="/corporate-ui-docs/developer/corporate-ui-for-frameworks.html" class="active">JS Frameworks</nav-item>
-            <nav-item location="/corporate-ui-docs/developer/bootstrap-original-docs.html">Scania Bootstrap</nav-item>
-            <nav-item location="/corporate-ui-docs/template/html-copy-paste/html-copy-paste.html" >HTML copy paste</nav-item>
-            <nav-item location="/corporate-ui-docs/developer/faq.html">FAQ</nav-item>
-            <nav-item location="/corporate-ui-docs/developer/contact-us.html">Contact Us</nav-item>
-          </sub-navigation>
-        </nav-item>
-        <nav-item location="/corporate-ui-docs/mobile-apps/">Mobile Apps</nav-item>
-      </primary-items>
-    </c-main-navigation>
+        <primary-items>
+          <nav-item location="/corporate-ui-docs/">Home</nav-item>
+          <nav-item location="/corporate-ui-docs/developer/" class="active">Corporate UI
+            <sub-navigation caption="Corporate UI">
+              <nav-item location="/corporate-ui-docs/developer/">About</nav-item>
+              <nav-item location="/corporate-ui-docs/developer/bootstrap-original-docs.html">Components</nav-item>
+              <nav-item location="/corporate-ui-docs/developer/html-copy-paste/html-copy-paste.html" >HTML copy paste</nav-item>
+              <nav-item location="/corporate-ui-docs/developer/corporate-ui-for-frameworks.html" class="active">JS Frameworks</nav-item>
+              <nav-item location="/corporate-ui-docs/developer/faq.html">FAQ</nav-item>
+              <nav-item location="/corporate-ui-docs/developer/contact-us.html">Contact Us</nav-item>
+            </sub-navigation>
+          </nav-item>
+          <nav-item location="/corporate-ui-docs/mobile-apps/">Mobile Apps</nav-item>
+          <nav-item location="/corporate-ui-docs/styleguide/">Style Guide
+            <sub-navigation caption="Style Guide">
+              <nav-item location="/corporate-ui-docs/logotype/">Logotype</nav-item>
+              <nav-item location="/corporate-ui-docs/styleguide/icons/">Icons</nav-item>
+              <nav-item location="/corporate-ui-docs/colours/">Colours</nav-item>
+              <nav-item location="/corporate-ui-docs/typography/">Typography</nav-item>
+            </sub-navigation>
+          </nav-item>
+        </primary-items>
+
+        <secondary-items>
+          <nav-item> <a href="https://www.scania.com/ux-library/en/home.html" target="_blank">Comon editors</a></nav-item>
+        </secondary-items>
+      </c-main-navigation>
 
     <style>
      article p a {font-family: 'Scania Sans Bold'}
      xmp {
-          font-size: 2.2rem;
-          color: #1a58e2;
-          line-height: normal;
-          margin-bottom: 34px;
+        font-size: 2.2rem;
+        color: #1a58e2;
+        line-height: normal;
+        margin-bottom: 34px;
       }
     </style>
 
