--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta http-equiv="refresh" content="0;url=https://static.scania.com/vendors/components/pure-js/nonJS-browsers/1.0.0/nonJS-browsers.html">
   </noscript>
 
-  <title>UX Library - UI Guidelines - Corporate UI</title>
+  <title>UX Library - UI Guidelines</title>
   <script src="https://static.scania.com/vendors/components/pure-js/browser-reject/1.0.0/js/browser-reject.js"></script>
   <script src="https://static.scania.com/vendors/frameworks/jQuery/1.11.3/jquery-1.11.3.min.js"></script> 
   <script src="https://static.scania.com/build/global/3.5.3/js/corporate-ui.js"></script>
@@ -42,30 +42,33 @@
   </c-corporate-header>
 
   <c-main-content>
-
-    <c-main-navigation>
+  <c-main-navigation>
       <primary-items>
         <nav-item location="/corporate-ui-docs/" class="active">Home</nav-item>
-        <nav-item location="/corporate-ui-docs/styleguide/">Style Guide
-          <sub-navigation caption="Style Guide">
-            <nav-item location="/corporate-ui-docs/logotype/">Logotype</nav-item>
-            <nav-item location="/corporate-ui-docs/icons/">Icons</nav-item>
-            <nav-item location="/corporate-ui-docs/colours/">Colours</nav-item>
-            <nav-item location="/corporate-ui-docs/typography/">Typography</nav-item>
-          </sub-navigation>
-        </nav-item>
-        <nav-item location="/corporate-ui-docs/developer/">Web Applications
-          <sub-navigation caption="Web Applications">
-            <nav-item location="/corporate-ui-docs/developer/">Corporate UI</nav-item>
+        <nav-item location="/corporate-ui-docs/developer/">Corporate UI
+          <sub-navigation caption="Corporate UI">
+            <nav-item location="/corporate-ui-docs/developer/">About</nav-item>
+            <nav-item location="/corporate-ui-docs/developer/bootstrap-original-docs.html">Components</nav-item>
+            <nav-item location="/corporate-ui-docs/developer/html-copy-paste/html-copy-paste.html" >HTML copy paste</nav-item>
             <nav-item location="/corporate-ui-docs/developer/corporate-ui-for-frameworks.html">JS Frameworks</nav-item>
-            <nav-item location="/corporate-ui-docs/developer/bootstrap-original-docs.html" >Scania Bootstrap</nav-item>
-            <nav-item location="/corporate-ui-docs/template/html-copy-paste/html-copy-paste.html" >HTML copy paste</nav-item>
             <nav-item location="/corporate-ui-docs/developer/faq.html">FAQ</nav-item>
             <nav-item location="/corporate-ui-docs/developer/contact-us.html">Contact Us</nav-item>
           </sub-navigation>
         </nav-item>
         <nav-item location="/corporate-ui-docs/mobile-apps/">Mobile Apps</nav-item>
+        <nav-item location="/corporate-ui-docs/styleguide/">Style Guide
+          <sub-navigation caption="Style Guide">
+            <nav-item location="/corporate-ui-docs/logotype/">Logotype</nav-item>
+            <nav-item location="/corporate-ui-docs/styleguide/icons/">Icons</nav-item>
+            <nav-item location="/corporate-ui-docs/colours/">Colours</nav-item>
+            <nav-item location="/corporate-ui-docs/typography/">Typography</nav-item>
+          </sub-navigation>
+        </nav-item>
       </primary-items>
+
+      <secondary-items>
+          <nav-item> <a href="https://www.scania.com/ux-library/en/home.html" target="_blank">Comon editors</a></nav-item>
+      </secondary-items>
     </c-main-navigation>
 
     <section class="light ux-sections">
@@ -74,35 +77,21 @@
         <p>Welcome to the all-new Scania UX Library. Here you'll find information about how to implement and use our new design elements like the logotype, fonts, icons and web components. The UX Library serves a big audience and many types of stakeholders. Please select the appropriate section for you particular needs.</p>
 
         <div class="row">
-         <div class="col-md-4 col-sm-6 col-xs-12">
-            <a href="/corporate-ui-docs/developer/bootstrap-original-docs.html"><img src="/corporate-ui-docs/images/templates-sample.svg"></a>
-            <h4 class="">UX Design Patterns</h4>
-            <p>If you're a UX Designer please pick the correct patterns from the <a href="/corporate-ui-docs/developer/bootstrap-original-docs.html">Corporate UI Design System</a>.</p>
+          <div class="col-md-4 col-sm-4 col-xs-12">
+            <a href="/corporate-ui-docs/developer/"><img src="/corporate-ui-docs/images/templates-sample.svg"></a>
+            <h4>Corporate UI</h4>
+            <p>If you're a UI Designer please pick the correct patterns from the <a href="/corporate-ui-docs/developer/bootstrap-original-docs.html">Corporate UI Design System</a>.</p>
           </div>
-<!--           <div class="col-md-4 col-sm-6 col-xs-12">
-            <a href="component/"><img src="/corporate-ui-docs/images/web-components.svg"></a>
-            <h4 class="">Web Components</h4>
-            <p>If you're a UX designer or a Front End developer, you'll be able to find a lot of <a href="component/">pre developed components</a> to use in the application that you're currently developing.</p>
-          </div> -->
-          <div class="col-md-4 col-sm-6 col-xs-12">
-            <a href="/corporate-ui-docs/template/html-copy-paste/html-copy-paste.html"><img src="/corporate-ui-docs/images/bootstrap-labs.svg"></a>
-            <h4 class="">HTML Samples</h4>
-            <p>In the <a href="/corporate-ui-docs/template/html-copy-paste/html-copy-paste.html">HTML Copy and Paste section</a> developers will be able to download code samples that for sure will save a lot of time. This section is in the Dev Zone, using the latest web technology.</p>
+          <div class="col-md-4 col-sm-4 col-xs-12">
+            <a href="/corporate-ui-docs/mobile-apps/"><img src="/corporate-ui-docs/images/templates-sample.svg"></a>
+            <!-- <a href="/corporate-ui-docs/mobile-apps/"><img src="/corporate-ui-docs/images/interaction.svg"></a> -->
+            <h4>Mobile Apps</h4>
+            <p>Developing a native mobile application differs from developing for the web.</p>
           </div>
-          <div class="col-md-4 col-sm-6 col-xs-12">
-            <a href="/corporate-ui-docs/developer/bootstrap-original-docs.html"><img src="/corporate-ui-docs/images/scania-bootstrap.svg"></a>
-            <h4 class="">Scania Bootstrap</h4>
-            <p>Scania Bootstrap is the HTML/CSS framework for implementing web applications at Scania. Basically, you can use all <a href="/corporate-ui-docs/developer/bootstrap-original-docs.html">Bootstrap Classes and Components</a>. 
-          </div>
-          <div class="col-md-4 col-sm-6 col-xs-12">
-            <a href="https://www.scania.com/ux-library/en/home.html" target="_blank"><img src="/corporate-ui-docs/images/adobe-experience-manager.svg"></a>
-            <h4 class="">ComOn Editors</h4>
-            <p>If you're working with a site supported by the ComOn team you'll find the available <a href="https://www.scania.com/ux-library/en/home.html" target="_blank">components and templates at this site</a>.</p>
-          </div>
-          <div class="col-md-4 col-sm-6 col-xs-12">
+          <div class="col-md-4 col-sm-4 col-xs-12">
             <a href="/corporate-ui-docs/styleguide/"><img src="/corporate-ui-docs/images/styleguide.svg"></a>
-            <h4 class="">Styleguide</h4>
-            <p>In the styleguide you'll find out more about how to use the new <a href="/corporate-ui-docs/icons/">icons</a>, <a href="/corporate-ui-docs/typography/">typography</a> and  <a href="/corporate-ui-docs/logotype/">logotype</a> in web based applications. They are all included in the <a href="/corporate-ui-docs/developer/">Corporate UI Design System</a>.</p>
+            <h4>Styleguide</h4>
+            <p>In the styleguide you'll find out more about how to use the new <a href="/corporate-ui-docs/styleguide/icons/">icons</a>, <a href="/corporate-ui-docs/typography/">typography</a> and  <a href="/corporate-ui-docs/logotype/">logotype</a> in web based applications. They are all included in the <a href="/corporate-ui-docs/developer/">Corporate UI Design System</a>.</p>
           </div>
         </div>
       </div>
@@ -110,11 +99,11 @@
   </c-main-content>
 
   <c-corporate-footer>
-      <nav-item location="/corporate-ui-docs/developer/contact-us.html">Contact Us</nav-item>
-      <nav-item location="mailto:corporate-ui@scania.com">Contact</nav-item>
+    <nav-item location="/corporate-ui-docs/developer/contact-us.html">Contact Us</nav-item>
+    <nav-item location="mailto:corporate-ui@scania.com">Contact</nav-item>
   </c-corporate-footer>
-  <c-cookie-message name="cookieMessage" text="hideMessage" path="/"></c-cookie-message>
 
+  <c-cookie-message name="cookieMessage" text="hideMessage" path="/"></c-cookie-message>
   <script src="/corporate-ui-docs/js/ux-lib.js"></script>
 </body>
 </html>
