--- a/styleguide/index.html
+++ b/styleguide/index.html
@@ -46,27 +46,31 @@
   <c-main-content>
     <c-main-navigation>
       <primary-items>
-          <nav-item location="/corporate-ui-docs/">Home</nav-item>
-          <nav-item location="/corporate-ui-docs/styleguide/" class="active">Style Guide
+        <nav-item location="/corporate-ui-docs/">Home</nav-item>
+        <nav-item location="/corporate-ui-docs/developer/">Corporate UI
+          <sub-navigation caption="Corporate UI">
+            <nav-item location="/corporate-ui-docs/developer/">About</nav-item>
+            <nav-item location="/corporate-ui-docs/developer/bootstrap-original-docs.html">Components</nav-item>
+            <nav-item location="/corporate-ui-docs/developer/html-copy-paste/html-copy-paste.html">HTML copy paste</nav-item>
+            <nav-item location="/corporate-ui-docs/developer/corporate-ui-for-frameworks.html">JS Frameworks</nav-item>
+            <nav-item location="/corporate-ui-docs/developer/faq.html">FAQ</nav-item>
+            <nav-item location="/corporate-ui-docs/developer/contact-us.html">Contact Us</nav-item>
+          </sub-navigation>
+        </nav-item>
+        <nav-item location="/corporate-ui-docs/mobile-apps/">Mobile Apps</nav-item>
+        <nav-item location="/corporate-ui-docs/styleguide/" class="active">Style Guide
           <sub-navigation caption="Style Guide">
             <nav-item location="/corporate-ui-docs/logotype/">Logotype</nav-item>
-            <nav-item location="/corporate-ui-docs/icons/">Icons</nav-item>
+            <nav-item location="/corporate-ui-docs/styleguide/icons/">Icons</nav-item>
             <nav-item location="/corporate-ui-docs/colours/">Colours</nav-item>
             <nav-item location="/corporate-ui-docs/typography/">Typography</nav-item>
           </sub-navigation>
-          </nav-item>
-          <nav-item location="/corporate-ui-docs/developer/">Web Applications
-            <sub-navigation caption="Web Applications">
-              <nav-item location="/corporate-ui-docs/developer/">Corporate UI</nav-item>
-              <nav-item location="/corporate-ui-docs/developer/corporate-ui-for-frameworks.html">JS Frameworks</nav-item>
-              <nav-item location="/corporate-ui-docs/developer/bootstrap-original-docs.html" >Scania Bootstrap</nav-item>
-              <nav-item location="/corporate-ui-docs/template/html-copy-paste/html-copy-paste.html" >HTML copy paste</nav-item>
-              <nav-item location="/corporate-ui-docs/developer/faq.html">FAQ</nav-item>
-              <nav-item location="/corporate-ui-docs/developer/contact-us.html">Contact Us</nav-item>
-            </sub-navigation>
-          </nav-item>
-          <nav-item location="/corporate-ui-docs/mobile-apps/">Mobile Apps</nav-item>
+        </nav-item>
       </primary-items>
+
+      <secondary-items>
+        <nav-item> <a href="https://www.scania.com/ux-library/en/home.html" target="_blank">Comon editors</a></nav-item>
+      </secondary-items>
     </c-main-navigation>
 
     <section class="light ux-sections">
@@ -98,12 +102,6 @@
             <a href="../typography/"><img src="/corporate-ui-docs/images/typography.svg"></a>
             <h4>Typography</h4>
             <p>In the <a href="../typography/">typography</a> section you'll find out the most important things to know about the Scania Sans typeface and what cuts are available, as well as when to use them.</p>
-          </div>
-
-          <div class="col-md-4 col-sm-6 col-xs-12">
-            <a href="../mobile-apps/"><img src="/corporate-ui-docs/images/interaction.svg"></a>
-            <h4>Mobile Apps</h4>
-            <p>Developing a native mobile application differs from developing for the web. For mobile apps, please use our additional <a href="../mobile-apps/">guidelines and templates</a>.</p>
           </div>
 
           <div class="col-md-4 col-sm-6 col-xs-12">
