--- a/developer/extended-tables.html
+++ b/developer/extended-tables.html
@@ -52,30 +52,34 @@
   </c-corporate-header>
 
   <c-main-content>
-
     <c-main-navigation>
       <primary-items>
         <nav-item location="/corporate-ui-docs/">Home</nav-item>
+        <nav-item location="/corporate-ui-docs/developer/" class="active">Corporate UI
+          <sub-navigation caption="Corporate UI">
+            <nav-item location="/corporate-ui-docs/developer/">About</nav-item>
+            <nav-item location="/corporate-ui-docs/developer/bootstrap-original-docs.html">Components</nav-item>
+            <nav-item location="/corporate-ui-docs/developer/html-copy-paste/html-copy-paste.html" >HTML copy paste</nav-item>
+            <nav-item location="/corporate-ui-docs/developer/corporate-ui-for-frameworks.html">JS Frameworks</nav-item>
+            <nav-item location="/corporate-ui-docs/developer/faq.html">FAQ</nav-item>
+            <nav-item location="/corporate-ui-docs/developer/contact-us.html">Contact Us</nav-item>
+          </sub-navigation>
+        </nav-item>
+        <nav-item location="/corporate-ui-docs/mobile-apps/">Mobile Apps</nav-item>
         <nav-item location="/corporate-ui-docs/styleguide/">Style Guide
           <sub-navigation caption="Style Guide">
+            <nav-item location="/corporate-ui-docs/styleguide/">Home</nav-item>
             <nav-item location="/corporate-ui-docs/styleguide/logotypes/">Logotype</nav-item>
             <nav-item location="/corporate-ui-docs/styleguide/icons/">Icons</nav-item>
             <nav-item location="/corporate-ui-docs/styleguide/colours/">Colours</nav-item>
             <nav-item location="/corporate-ui-docs/styleguide/typography/">Typography</nav-item>
           </sub-navigation>
         </nav-item>
-        <nav-item location="/corporate-ui-docs/developer/" class="active">Web Applications
-          <sub-navigation caption="Web Applications">
-            <nav-item location="/corporate-ui-docs/developer/">Corporate UI</nav-item>
-            <nav-item location="/corporate-ui-docs/developer/corporate-ui-for-frameworks.html">JS Frameworks</nav-item>
-            <nav-item location="/corporate-ui-docs/developer/bootstrap-original-docs.html" >Scania Bootstrap</nav-item>
-            <nav-item location="/corporate-ui-docs/developer/html-copy-paste/html-copy-paste.html" >HTML copy paste</nav-item>
-            <nav-item location="/corporate-ui-docs/developer/faq.html">FAQ</nav-item>
-            <nav-item location="/corporate-ui-docs/developer/contact-us.html">Contact Us</nav-item>
-          </sub-navigation>
-        </nav-item>
-        <nav-item location="/corporate-ui-docs/mobile-apps/">Mobile Apps</nav-item>
       </primary-items>
+
+      <secondary-items>
+          <nav-item> <a href="https://www.scania.com/ux-library/en/home.html" target="_blank">Comon editors</a></nav-item>
+      </secondary-items>
     </c-main-navigation>
 
     <section class="light">
