--- a/developer/index.html
+++ b/developer/index.html
@@ -42,6 +42,7 @@
         <nav-item location="/corporate-ui-docs/mobile-apps/">Mobile Apps</nav-item>
         <nav-item location="/corporate-ui-docs/styleguide/">Style Guide
           <sub-navigation caption="Style Guide">
+            <nav-item location="/corporate-ui-docs/styleguide/">Home</nav-item>
             <nav-item location="/corporate-ui-docs/styleguide/logotypes/">Logotype</nav-item>
             <nav-item location="/corporate-ui-docs/styleguide/icons/">Icons</nav-item>
             <nav-item location="/corporate-ui-docs/styleguide/colours/">Colours</nav-item>
