--- a/styleguide/colours/all-colors.html
+++ b/styleguide/colours/all-colors.html
@@ -78,6 +78,7 @@
 				<nav-item location="/corporate-ui-docs/mobile-apps/">Mobile Apps</nav-item>
 				<nav-item location="/corporate-ui-docs/styleguide/" class="active">Style Guide
 					<sub-navigation caption="Style Guide">
+						<nav-item location="/corporate-ui-docs/styleguide/">Home</nav-item>
 						<nav-item location="/corporate-ui-docs/styleguide/logotypes/">Logotype</nav-item>
 						<nav-item location="/corporate-ui-docs/styleguide/icons/">Icons</nav-item>
 						<nav-item location="/corporate-ui-docs/styleguide/colours/" class="active">Colours</nav-item>
