--- a/styleguide/icons/index.html
+++ b/styleguide/icons/index.html
@@ -97,6 +97,7 @@
           <nav-item location="/corporate-ui-docs/mobile-apps/">Mobile Apps</nav-item>
           <nav-item location="/corporate-ui-docs/styleguide/" class="active">Style Guide
           <sub-navigation caption="Style Guide">
+              <nav-item location="/corporate-ui-docs/styleguide/">Home</nav-item>
               <nav-item location="/corporate-ui-docs/styleguide/logotypes/">Logotype</nav-item>
               <nav-item location="/corporate-ui-docs/styleguide/icons/" class="active">Icons</nav-item>
               <nav-item location="/corporate-ui-docs/styleguide/colours/">Colours</nav-item>
