--- a/corporate-ui/bootstrap-original-docs.html
+++ b/corporate-ui/bootstrap-original-docs.html
@@ -147,7 +147,7 @@ $(function(){
         <sub-navigation caption="Corporate UI">
           <nav-item location="/corporate-ui-docs/corporate-ui/">About</nav-item>
           <nav-item location="/corporate-ui-docs/corporate-ui/bootstrap-original-docs.html" class="active">Components</nav-item>
-          <nav-item location="/corporate-ui-docs/corporate-ui/html-copy-paste/html-copy-paste.html">HTML copy paste</nav-item>
+          <nav-item location="/corporate-ui-docs/corporate-ui/html-copy-paste/">HTML copy paste</nav-item>
           <nav-item location="/corporate-ui-docs/corporate-ui/corporate-ui-for-frameworks.html">JS Frameworks</nav-item>
           <nav-item location="/corporate-ui-docs/corporate-ui/faq.html">FAQ</nav-item>
           <nav-item location="/corporate-ui-docs/corporate-ui/contact-us.html">Contact Us</nav-item>
@@ -921,7 +921,7 @@ $(function(){
                 <article class="mt-5 mr-5">
                   <h1 id="core-css-overview">Core CSS (Scania Bootstrap)</h1>
                   <p class="lead">Scania Bootstrap is now a subset of the Corporate UI framework. Scania Bootstrap can still be used "stand alone" to tailor applications with the Corporate UI look and feel. Although, it will not fully take advantage of the easy uf use that our Custom Elements do offer. You'll simply have to develop and maintain a lot of the HTML and JavaScript code that's already availble in the components.</p>
-                  <p class="lead">When it comes to designing your particular functionallity, please copy code snippets from the <a href="/corporate-ui-docs/corporate-ui/html-copy-paste/html-copy-paste.html">the HTML Copy Paste section</a> or from this code repository. The library is uppdated on a daily basis so make sure you'll visit it frequently.</p>
+                  <p class="lead">When it comes to designing your particular functionallity, please copy code snippets from the <a href="/corporate-ui-docs/corporate-ui/html-copy-paste/">the HTML Copy Paste section</a> or from this code repository. The library is uppdated on a daily basis so make sure you'll visit it frequently.</p>
                   <p class="lead">All things that you'll need for your development, like icons, fonts. CSS and Custom Elements will become available for you once you're loading the <a href="https://static.scania.com/build/global/3.5.3/js/corporate-ui.js">corporate-ui.js</a>.</p>
 
                   <h2>CSS: Custom, Bootstrap 3 and Bootstrap 4</h2>
