--- a/corporate-ui/faq.html
+++ b/corporate-ui/faq.html
@@ -129,7 +129,7 @@
           <sub-navigation caption="Corporate UI">
             <nav-item location="/corporate-ui-docs/corporate-ui/">About</nav-item>
             <nav-item location="/corporate-ui-docs/corporate-ui/bootstrap-original-docs.html">Components</nav-item>
-            <nav-item location="/corporate-ui-docs/corporate-ui/html-copy-paste/html-copy-paste.html" >HTML copy paste</nav-item>
+            <nav-item location="/corporate-ui-docs/corporate-ui/html-copy-paste/" >HTML copy paste</nav-item>
             <nav-item location="/corporate-ui-docs/corporate-ui/corporate-ui-for-frameworks.html">JS Frameworks</nav-item>
             <nav-item location="/corporate-ui-docs/corporate-ui/faq.html" class="active">FAQ</nav-item>
             <nav-item location="/corporate-ui-docs/corporate-ui/contact-us.html">Contact Us</nav-item>
