--- a/corporate-ui/html-copy-paste/index.html
+++ b/corporate-ui/html-copy-paste/index.html
@@ -29,7 +29,7 @@
           <sub-navigation caption="Corporate UI">
             <nav-item location="/corporate-ui-docs/corporate-ui/">About</nav-item>
             <nav-item location="/corporate-ui-docs/corporate-ui/bootstrap-original-docs.html">Components</nav-item>
-            <nav-item location="/corporate-ui-docs/corporate-ui/html-copy-paste/html-copy-paste.html" class="active">HTML copy paste</nav-item>
+            <nav-item location="/corporate-ui-docs/corporate-ui/html-copy-paste/" class="active">HTML copy paste</nav-item>
             <nav-item location="/corporate-ui-docs/corporate-ui/corporate-ui-for-frameworks.html">JS Frameworks</nav-item>
             <nav-item location="/corporate-ui-docs/corporate-ui/faq.html">FAQ</nav-item>
             <nav-item location="/corporate-ui-docs/corporate-ui/contact-us.html">Contact Us</nav-item>
